# ckb-light-client

./: .gitignore  Cargo.toml  Makefile  dev-config.toml  index.html  package.json
.github/workflows/: ci.yaml  release.yaml
config/: dev.toml  mainnet.toml  testnet.toml
light-client-bin/: Cargo.toml
light-client-bin/src/: cli.rs  main.rs  rpc.rs  subcmds.rs
light-client-bin/src/tests/: mod.rs  service.rs
light-client-db-common/: Cargo.toml
light-client-db-common/src/: lib.rs  tests.rs
light-client-db-worker/: Cargo.toml  db.js  db.worker.js  index.html  package.json  webpack.config.js
light-client-db-worker/src/: db.rs  lib.rs
light-client-js/: esbuild.config.mjs  package.json  tsconfig.json  webpack.config.js
light-client-js/src/: db.worker.ts  index.ts  lightclient.worker.ts  types.test.ts  types.ts  worker.d.ts
light-client-lib/: Cargo.toml  lightclient.js
light-client-lib/src/: error.rs  lib.rs  service.rs  types.rs  verify.rs  wasm_utils.rs
light-client-lib/src/protocols/: relayer.rs  status.rs  synchronizer.rs
light-client-lib/src/protocols/filter/: block_filter.rs
light-client-lib/src/protocols/filter/components/: block_filter_hashes_process.rs  block_filters_process.rs
light-client-lib/src/protocols/light_client/: mod.rs  peers.rs  prelude.rs
light-client-lib/src/protocols/light_client/components/: send_blocks_proof.rs  send_last_state_proof.rs  send_transactions_proof.rs
light-client-lib/src/storage/: mod.rs
light-client-lib/src/storage/db/: browser.rs  browser_test.rs  mod.rs  native.rs
light-client-lib/src/tests/: mod.rs  prelude.rs  verify.rs
light-client-lib/src/tests/protocols/: block_filter.rs
light-client-lib/src/tests/protocols/light_client/: mod.rs  send_blocks_proof.rs  send_last_state.rs  send_last_state_proof.rs
light-client-lib/src/tests/utils/: chain.rs
light-client-wasm/: .gitignore  Cargo.toml  index.js  index.ts  lightclient.js  lightclient.worker.js  package-lock.json  package.json  webpack.config.js
light-client-wasm/src/: lib.rs
src/: storage.rs  subcmds.rs
src/protocols/: relayer.rs
src/protocols/filter/components/: block_filters_process.rs
src/tests/: prelude.rs
src/tests/utils/: chain.rs
wasm/: README.md
wasm/light-client-db-common/src/: tests.rs
wasm/light-client-db-worker/: index.ts  package.json  webpack.config.js
wasm/light-client-db-worker/src/: lib.rs  util.rs
wasm/light-client-js/: README.md  package.json
wasm/light-client-js/src/: db.worker.ts  index.ts  lightclient.worker.ts  types.ts
wasm/light-client-wasm/: Cargo.toml  package.json  webpack.config.js
wasm/light-client-wasm/src/: lib.rs
