[workspace]
members = [
    "light-client-lib",
    # "light-client-bin",
    "light-client-wasm",
    "light-client-db-worker",
    "light-client-db-common",
]
exclude = ["light-client-bin"]

resolver = "2"


[profile.release]
overflow-checks = true


[patch.crates-io]
tentacle = { git = "https://github.com/nervosnetwork/tentacle", rev = "22cc9bb" }
tentacle-multiaddr = { git = "https://github.com/nervosnetwork/tentacle", rev = "22cc9bb" }
tentacle-secio = { git = "https://github.com/nervosnetwork/tentacle", rev = "22cc9bb" }
