[package]
name = "light-client-db-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
console_error_panic_hook = { version = "0.1.7" }
idb = "0.6.4"
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.84"
web-sys = "0.3.72"
light-client-db-common = { path = "../light-client-db-common" }
wasm-bindgen-futures = "0.4.45"
wasm-logger = "0.2.0"
log = "0.4.22"
web-time = "1.1.0"
tokio = { version = "1.41.1", features = ["sync"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
