[package]
name = "ckb-light-client-lib"
version = "0.3.8"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "A CKB light client based on FlyClient."
homepage = "https://github.com/nervosnetwork/ckb-light-client"
repository = "https://github.com/nervosnetwork/ckb-light-client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ckb-app-config = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-constant = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-network = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-traits = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-resource = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-verification = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-systemtime = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }

log = "0.4.14"
path-clean = "0.1.0"
rand = "0.8.5"
dashmap = "5.3"
linked-hash-map = "0.5.6"
governor = "0.6.3"
serde = { version = "1.0.136", features = ["derive"] }
ckb-merkle-mountain-range = "0.5.1"
golomb-coded-set = "0.2.1"
numext-fixed-uint = { version = "0.1", features = [
    "support_rand",
    "support_heapsize",
    "support_serde",
] }

anyhow = "1.0.56"
thiserror = "1.0.30"
toml = "0.5.8"
tokio = { version = "1.20" }
idb = "0.6"
serde-wasm-bindgen = "0.6.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = { package = "ckb-rocksdb", version = "=0.21.1", features = [
    "snappy",
], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
wasm-bindgen = "0.2.63"
idb = "0.6"
serde-wasm-bindgen = "0.6.5"
light-client-db-common = { path = "../light-client-db-common" }
web-sys = "0.3.72"
console_error_panic_hook = { version = "0.1.7" }

[dev-dependencies]
ckb-shared = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-chain = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-tx-pool = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-store = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48" }
ckb-systemtime = { git = "https://github.com/nervosnetwork/ckb.git", rev = "80cfe48", features = [
    "enable_faketime",
] }
tempfile = "3.0"
rand = "0.6"
serde_json = "1.0"
lazy_static = "1.3.0"
env_logger = "0.11"
